--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>London Boroughs Data Visualization</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/topojson@3"></script>
 </head>
 <body>
 <div id="controls">
-    <button class="button" id="affordability">Affordability Ratio</button>
-    <button class="button" id="earnings">Median Workplace Earnings</button>
-    <button class="button" id="house-price">Median House Price</button>
+    <button class="button" id="AffordabilityRatio">Affordability Ratio</button>
+    <button class="button" id="MedianWorkplaceEarnings">Median Workplace Earnings</button>
+    <button class="button" id="MedianHousePrice">Median House Price</button>
 </div>
 <div id="map-container">
     <!-- The SVG will be appended here by D3 -->
