--- a/index.html
+++ b/index.html
@@ -2,24 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>London Boroughs Data Visualization</title>
-    <link rel="stylesheet" href="style.css">
+    <title>London Housing Analysis</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://unpkg.com/topojson@3"></script>
+    <script src="https://unpkg.com/topojson-client@3"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="controls">
-    <button class="button" id="AffordabilityRatio">Affordability Ratio</button>
-    <button class="button" id="MedianWorkplaceEarnings">Median Workplace Earnings</button>
-    <button class="button" id="MedianHousePrice">Median House Price</button>
-</div>
-<div id="map-container">
-    <!-- The SVG will be appended here by D3 -->
-</div>
-<div id="selected-borough">Chosen Borough: <span id="borough-name">None</span></div>
-<div id="line-graphs">
-    <svg id="line-graph-1"></svg>
-    <svg id="line-graph-2"></svg>
+<div id="visualization-container">
+    <div id="map-container">
+        <!-- Map will be appended here by D3 -->
+    </div>
+    <div id="controls">
+        <button class="button" id="affordability">Affordability Ratio</button>
+        <button class="button" id="earnings">Median Workplace Earnings</button>
+        <button class="button" id="house-prices">Median House Prices</button>
+    </div>
+    <div id="slider-container">
+        <!-- Year slider will be appended here by D3 -->
+    </div>
+    <div id="color-scale">
+        <!-- Color scale will be appended here by D3 -->
+    </div>
+    <div id="line-graphs">
+        <div id="affordability-ratio-graph">
+            <h3>Affordability Ratio</h3>
+            <!-- Affordability ratio line graph will be appended here by D3 -->
+        </div>
+        <div id="price-earnings-graph">
+            <h3>Price and Earnings</h3>
+            <!-- Price and earnings line graph will be appended here by D3 -->
+        </div>
+    </div>
 </div>
 <script src="script.js"></script>
 </body>
