Update for deployment

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <button class="button" id="house-prices">Median House Prices</button>
     </div>
     <div id="slider-container">
-        <!-- Year slider will be appended here by D3 -->
-    </div>
-    <div id="color-scale">
-        <!-- Color scale will be appended here by D3 -->
+        <button id="play-button">Run</button>
+        <label for="year-slider">Year</label><input type="range" id="year-slider" min="1997" max="2022" value="1997" step="1">
+        <span id="year-display">1997</span>
     </div>
     <div id="line-graphs">
         <div id="affordability-ratio-graph">
