Before fix colour scale

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div id="map-container">
         <!-- Map will be appended here by D3 -->
     </div>
+    <div id="borough-message">
+        Click map to choose borough
+    </div>
     <div id="controls">
         <button class="button" id="affordability">Affordability Ratio</button>
         <button class="button" id="earnings">Median Workplace Earnings</button>
