--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div id="line-graphs">
         <div id="affordability-ratio-graph">
-            <h3>Affordability Ratio</h3>
+            <h3>Affordability Ratio and Sa</h3>
             <!-- Affordability ratio line graph will be appended here by D3 -->
         </div>
     </div>
